<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--第一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"        >
        <Button
            android:id="@+id/btn1_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:layout_gravity=""

            android:text="@string/btn1_1"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            />


        <Button
            android:id="@+id/btn1_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1.5"
            android:baselineAligned="false"
            android:text="@string/btn1_2"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"

            />

        <Button
            android:id="@+id/btn1_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginLeft="4dp"

            android:baselineAligned="false"
            android:text="@string/btn1_3"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"

             />
        <Button
            android:id="@+id/btn1_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"

            android:baselineAligned="false"
            android:text="@string/btn1_4"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            />

    </LinearLayout>
    <!--第二行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        >

        <Button
            android:id="@+id/btn2_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:layout_gravity=""
            android:text="@string/btn2_1"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            style=""/>

        <Button
            android:id="@+id/btn2_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn2_2"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"

            />

        <Button
            android:id="@+id/btn2_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn2_3"
            android:background="@drawable/button_style"

            android:textAllCaps="false"
            android:textSize="12dp"

             />
        <Button
            android:id="@+id/btn2_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn2_4"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            />

    </LinearLayout>
    <!--第三行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        >
        <Button
            android:id="@+id/btn3_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:baselineAligned="false"
            android:layout_gravity=""
            android:text="@string/btn3_1"
            android:background="@drawable/button_style"

            android:textAllCaps="false"
            android:textSize="12dp"
            style=""/>

        <Button
            android:id="@+id/btn3_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn3_2"
            android:background="@drawable/button_style"

            android:textAllCaps="false"
            android:textSize="12dp"

            />

        <Button
            android:id="@+id/btn3_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn3_3"
            android:background="@drawable/button_style"

            android:textAllCaps="false"
            android:textSize="12dp"

             />
        <Button
            android:id="@+id/btn3_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn3_4"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            />

    </LinearLayout>
    <!--第四行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        >
        <Button
            android:id="@+id/btn4_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:layout_gravity=""
            android:text="@string/btn4_1"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            style=""/>

        <Button
            android:id="@+id/btn4_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn4_2"
            android:background="@drawable/button_style"

            android:textAllCaps="false"
            android:textSize="12dp"

            />

        <Button
            android:id="@+id/btn4_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn4_3"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"

             />
        <Button
            android:id="@+id/btn4_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:baselineAligned="false"
            android:text="@string/btn4_4"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="12dp"
            />

    </LinearLayout>

</LinearLayout>
